Improved responsiveness for even lower resolution devices and modified delete and enter buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button class="keyboard-button">J</button>
                 <button class="keyboard-button">K</button>
                 <button class="keyboard-button">L</button>
-                <button class="keyboard-button">&lt;</button>
+                <button class="keyboard-button delete">&lt;</button>
             </div>
             <div class="row">
                 <button class="keyboard-button">Z</button>
