--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 </head>
 <body>
     <div class="wrapper">
-        <a href="./index.html"><h1>WordGuess</h1></a>
+        <nav class="top-nav">
+            <a href="https://qkas.github.io/"><i class="fa fa-undo"></i></a>
+            <a href="https://qkas.github.io/WordGuess/"><h1>WordGuess</h1></a>
+            <a href="https://qkas.github.io/DiceRoll/"><i class="fa fa-angle-right"></i></a>
+        </nav>
         <h2>LETS GUESS</h2>
         <section class="boxes">
-            <div class="box">T</div>
-            <div class="box">E</div>
-            <div class="box">S</div>
-            <div class="box">T</div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </section>
         <section class="keyboard">
             <div class="row">
