Fixed scalability issues caused by top navigation

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </nav>
         <h2>LETS GUESS</h2>
         <section class="boxes">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
         </section>
         <section class="keyboard">
             <div class="row">
